--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "date-fns": "^2.21.3",
     "date-fns-tz": "^1.1.4",
     "fuse.js": "^6.4.6",
+    "lodash": "^4.17.21",
     "next": "10.2.0",
     "next-pwa": "^5.2.21",
     "react": "17.0.2",
@@ -31,6 +32,9 @@
     "react-modal": "^3.13.1",
     "react-toastify": "^7.0.4",
     "react-tooltip": "^4.2.19",
+    "react-zoom-pan-pinch": "^1.6.1",
+    "recoil": "^0.2.0",
+    "recoil-persist": "^2.5.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
@@ -38,6 +42,8 @@
     "eslint": "^7.26.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
