--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
 /node_modules
 /.pnp
@@ -32,3 +30,7 @@ yarn-error.log*
 
 # vercel
 .vercel
+
+# pwa
+/public/sw.js
+/public/workbox-*.js
